syntax.output
Terminals unused in grammar

    LETTER
    DO


State 1 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce
State 47 conflicts: 1 shift/reduce
State 72 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList
   10           | VarDec error ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier
   13          | error

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | error RP
   25       | ID LP VarList error LC

   26 VarList: ParamDec COMMA VarList
   27        | ParamDec

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC
   30       | LC DefList StmtList error
   31       | error RC

   32 StmtList: Stmt StmtList
   33         | %empty

   34 Stmt: Exp SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | error SEMI

   41 DefList: Def DefList
   42        | %empty

   43 Def: Specifier DecList SEMI
   44    | error SEMI
   45    | Specifier DecList error SEMI

   46 DecList: Dec
   47        | Dec COMMA DecList

   48 Dec: VarDec
   49    | VarDec ASSIGNOP Exp
   50    | error SEMI

   51 Exp: Exp ASSIGNOP Exp
   52    | Exp AND Exp
   53    | Exp OR Exp
   54    | Exp RELOP Exp
   55    | Exp PLUS Exp
   56    | Exp MINUS Exp
   57    | Exp STAR Exp
   58    | Exp DIV Exp
   59    | LP Exp RP
   60    | MINUS Exp
   61    | NOT Exp
   62    | ID LP Args RP
   63    | ID LP RP
   64    | Exp LB Exp RB
   65    | Exp DOT ID
   66    | ID
   67    | INT
   68    | FLOAT

   69 Args: Exp COMMA Args
   70     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 10 13 21 24 25 30 31 40 44 45 50
    LETTER <node> (258)
    SEMI <node> (259) 4 5 7 34 36 40 43 44 45 50
    COMMA <node> (260) 9 26 47 69
    TYPE <node> (261) 11
    STRUCT <node> (262) 14 15
    IF <node> (263) 37 38
    WHILE <node> (264) 39
    RETURN <node> (265) 36
    INT <node> (266) 20 67
    FLOAT <node> (267) 68
    ID <node> (268) 16 18 19 22 23 25 62 63 65 66
    ASSIGNOP <node> (269) 49 51
    OR <node> (270) 53
    AND <node> (271) 52
    RELOP <node> (272) 54
    PLUS <node> (273) 55
    MINUS <node> (274) 56 60
    STAR <node> (275) 57
    DIV <node> (276) 58
    NOT <node> (277) 61
    LP <node> (278) 22 23 25 37 38 39 59 62 63
    RP <node> (279) 22 23 24 37 38 39 59 62 63
    LB <node> (280) 20 64
    RB <node> (281) 20 21 64
    DO <node> (282)
    LC <node> (283) 14 25 29 30
    RC <node> (284) 14 29 31
    DOT <node> (285) 65
    ELSE <node> (286) 38
    LOWER_THAN_ELSE (287)


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    Program <node> (34)
        on left: 1
        on right: 0
    ExtDefList <node> (35)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (36)
        on left: 4 5 6 7
        on right: 2
    ExtDecList <node> (37)
        on left: 8 9 10
        on right: 4 9 10
    Specifier <node> (38)
        on left: 11 12 13
        on right: 4 5 6 28 43 45
    StructSpecifier <node> (39)
        on left: 14 15
        on right: 12
    OptTag <node> (40)
        on left: 16 17
        on right: 14
    Tag <node> (41)
        on left: 18
        on right: 15
    VarDec <node> (42)
        on left: 19 20 21
        on right: 8 9 10 20 28 48 49
    FunDec <node> (43)
        on left: 22 23 24 25
        on right: 6
    VarList <node> (44)
        on left: 26 27
        on right: 22 25 26
    ParamDec <node> (45)
        on left: 28
        on right: 26 27
    CompSt <node> (46)
        on left: 29 30 31
        on right: 6 35
    StmtList <node> (47)
        on left: 32 33
        on right: 29 30 32
    Stmt <node> (48)
        on left: 34 35 36 37 38 39 40
        on right: 32 37 38 39
    DefList <node> (49)
        on left: 41 42
        on right: 14 29 30 41
    Def <node> (50)
        on left: 43 44 45
        on right: 41
    DecList <node> (51)
        on left: 46 47
        on right: 43 45 47
    Dec <node> (52)
        on left: 48 49 50
        on right: 46 47
    Exp <node> (53)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
        on right: 34 36 37 38 39 49 51 52 53 54 55 56 57 58 59 60 61 64 65 69 70
    Args <node> (54)
        on left: 69 70
        on right: 62 69


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI
   13 Specifier: error .

    SEMI  shift, and go to state 9

    SEMI      [reduce using rule 13 (Specifier)]
    $default  reduce using rule 13 (Specifier)


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    error  shift, and go to state 15
    SEMI   shift, and go to state 16
    ID     shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 11

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


State 12

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   21 VarDec: error . RB
   24 FunDec: error . RP

    RP  shift, and go to state 22
    RB  shift, and go to state 23


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP
   25       | ID . LP VarList error LC

    LP  shift, and go to state 24

    $default  reduce using rule 19 (VarDec)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 25


State 19

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   10           | VarDec . error ExtDecList
   20 VarDec: VarDec . LB INT RB

    error  shift, and go to state 26
    COMMA  shift, and go to state 27
    LB     shift, and go to state 28

    SEMI  reduce using rule 8 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 29
    LC     shift, and go to state 30

    CompSt  go to state 31


State 21

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 42 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 34
    Def              go to state 35


State 22

   24 FunDec: error RP .

    $default  reduce using rule 24 (FunDec)


State 23

   21 VarDec: error RB .

    $default  reduce using rule 21 (VarDec)


State 24

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP
   25       | ID LP . VarList error LC

    error   shift, and go to state 36
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 37

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 39
    ParamDec         go to state 40


State 25

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 26

   10 ExtDecList: VarDec error . ExtDecList

    error  shift, and go to state 41
    ID     shift, and go to state 42

    ExtDecList  go to state 43
    VarDec      go to state 19


State 27

    9 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 41
    ID     shift, and go to state 42

    ExtDecList  go to state 44
    VarDec      go to state 19


State 28

   20 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 45


State 29

   31 CompSt: error . RC

    RC  shift, and go to state 46


State 30

   29 CompSt: LC . DefList StmtList RC
   30       | LC . DefList StmtList error

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 42 (DefList)]
    IF      reduce using rule 42 (DefList)
    WHILE   reduce using rule 42 (DefList)
    RETURN  reduce using rule 42 (DefList)
    INT     reduce using rule 42 (DefList)
    FLOAT   reduce using rule 42 (DefList)
    ID      reduce using rule 42 (DefList)
    MINUS   reduce using rule 42 (DefList)
    NOT     reduce using rule 42 (DefList)
    LP      reduce using rule 42 (DefList)
    LC      reduce using rule 42 (DefList)
    RC      reduce using rule 42 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 35


State 31

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 32

   13 Specifier: error .
   44 Def: error . SEMI

    SEMI  shift, and go to state 48

    $default  reduce using rule 13 (Specifier)


State 33

   43 Def: Specifier . DecList SEMI
   45    | Specifier . DecList error SEMI

    error  shift, and go to state 49
    ID     shift, and go to state 42

    VarDec   go to state 50
    DecList  go to state 51
    Dec      go to state 52


State 34

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 53


State 35

   41 DefList: Def . DefList

    error   shift, and go to state 32
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 42 (DefList)]
    IF      reduce using rule 42 (DefList)
    WHILE   reduce using rule 42 (DefList)
    RETURN  reduce using rule 42 (DefList)
    INT     reduce using rule 42 (DefList)
    FLOAT   reduce using rule 42 (DefList)
    ID      reduce using rule 42 (DefList)
    MINUS   reduce using rule 42 (DefList)
    NOT     reduce using rule 42 (DefList)
    LP      reduce using rule 42 (DefList)
    LC      reduce using rule 42 (DefList)
    RC      reduce using rule 42 (DefList)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    DefList          go to state 54
    Def              go to state 35


State 36

   13 Specifier: error .

    $default  reduce using rule 13 (Specifier)


State 37

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 38

   28 ParamDec: Specifier . VarDec

    error  shift, and go to state 41
    ID     shift, and go to state 42

    VarDec  go to state 55


State 39

   22 FunDec: ID LP VarList . RP
   25       | ID LP VarList . error LC

    error  shift, and go to state 56
    RP     shift, and go to state 57


State 40

   26 VarList: ParamDec . COMMA VarList
   27        | ParamDec .

    COMMA  shift, and go to state 58

    $default  reduce using rule 27 (VarList)


State 41

   21 VarDec: error . RB

    RB  shift, and go to state 23


State 42

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 43

   10 ExtDecList: VarDec error ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 44

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 45

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 59


State 46

   31 CompSt: error RC .

    $default  reduce using rule 31 (CompSt)


State 47

   29 CompSt: LC DefList . StmtList RC
   30       | LC DefList . StmtList error

    error   shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62
    RETURN  shift, and go to state 63
    INT     shift, and go to state 64
    FLOAT   shift, and go to state 65
    ID      shift, and go to state 66
    MINUS   shift, and go to state 67
    NOT     shift, and go to state 68
    LP      shift, and go to state 69
    LC      shift, and go to state 30

    error  [reduce using rule 33 (StmtList)]
    RC     reduce using rule 33 (StmtList)

    CompSt    go to state 70
    StmtList  go to state 71
    Stmt      go to state 72
    Exp       go to state 73


State 48

   44 Def: error SEMI .

    $default  reduce using rule 44 (Def)


State 49

   21 VarDec: error . RB
   50 Dec: error . SEMI

    SEMI  shift, and go to state 74
    RB    shift, and go to state 23


State 50

   20 VarDec: VarDec . LB INT RB
   48 Dec: VarDec .
   49    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 75
    LB        shift, and go to state 28

    $default  reduce using rule 48 (Dec)


State 51

   43 Def: Specifier DecList . SEMI
   45    | Specifier DecList . error SEMI

    error  shift, and go to state 76
    SEMI   shift, and go to state 77


State 52

   46 DecList: Dec .
   47        | Dec . COMMA DecList

    COMMA  shift, and go to state 78

    $default  reduce using rule 46 (DecList)


State 53

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 54

   41 DefList: Def DefList .

    $default  reduce using rule 41 (DefList)


State 55

   20 VarDec: VarDec . LB INT RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 28

    $default  reduce using rule 28 (ParamDec)


State 56

   25 FunDec: ID LP VarList error . LC

    LC  shift, and go to state 79


State 57

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 58

   26 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 36
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 80
    ParamDec         go to state 40


State 59

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 60

   31 CompSt: error . RC
   40 Stmt: error . SEMI

    SEMI  shift, and go to state 81
    RC    shift, and go to state 46


State 61

   37 Stmt: IF . LP Exp RP Stmt
   38     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 82


State 62

   39 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 83


State 63

   36 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 84


State 64

   67 Exp: INT .

    $default  reduce using rule 67 (Exp)


State 65

   68 Exp: FLOAT .

    $default  reduce using rule 68 (Exp)


State 66

   62 Exp: ID . LP Args RP
   63    | ID . LP RP
   66    | ID .

    LP  shift, and go to state 85

    $default  reduce using rule 66 (Exp)


State 67

   60 Exp: MINUS . Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 86


State 68

   61 Exp: NOT . Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 87


State 69

   59 Exp: LP . Exp RP

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 88


State 70

   35 Stmt: CompSt .

    $default  reduce using rule 35 (Stmt)


State 71

   29 CompSt: LC DefList StmtList . RC
   30       | LC DefList StmtList . error

    error  shift, and go to state 89
    RC     shift, and go to state 90


State 72

   32 StmtList: Stmt . StmtList

    error   shift, and go to state 60
    IF      shift, and go to state 61
    WHILE   shift, and go to state 62
    RETURN  shift, and go to state 63
    INT     shift, and go to state 64
    FLOAT   shift, and go to state 65
    ID      shift, and go to state 66
    MINUS   shift, and go to state 67
    NOT     shift, and go to state 68
    LP      shift, and go to state 69
    LC      shift, and go to state 30

    error  [reduce using rule 33 (StmtList)]
    RC     reduce using rule 33 (StmtList)

    CompSt    go to state 70
    StmtList  go to state 91
    Stmt      go to state 72
    Exp       go to state 73


State 73

   34 Stmt: Exp . SEMI
   51 Exp: Exp . ASSIGNOP Exp
   52    | Exp . AND Exp
   53    | Exp . OR Exp
   54    | Exp . RELOP Exp
   55    | Exp . PLUS Exp
   56    | Exp . MINUS Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   64    | Exp . LB Exp RB
   65    | Exp . DOT ID

    SEMI      shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    OR        shift, and go to state 94
    AND       shift, and go to state 95
    RELOP     shift, and go to state 96
    PLUS      shift, and go to state 97
    MINUS     shift, and go to state 98
    STAR      shift, and go to state 99
    DIV       shift, and go to state 100
    LB        shift, and go to state 101
    DOT       shift, and go to state 102


State 74

   50 Dec: error SEMI .

    $default  reduce using rule 50 (Dec)


State 75

   49 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 103


State 76

   45 Def: Specifier DecList error . SEMI

    SEMI  shift, and go to state 104


State 77

   43 Def: Specifier DecList SEMI .

    $default  reduce using rule 43 (Def)


State 78

   47 DecList: Dec COMMA . DecList

    error  shift, and go to state 49
    ID     shift, and go to state 42

    VarDec   go to state 50
    DecList  go to state 105
    Dec      go to state 52


State 79

   25 FunDec: ID LP VarList error LC .

    $default  reduce using rule 25 (FunDec)


State 80

   26 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 26 (VarList)


State 81

   40 Stmt: error SEMI .

    $default  reduce using rule 40 (Stmt)


State 82

   37 Stmt: IF LP . Exp RP Stmt
   38     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 106


State 83

   39 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 64
    FLOAT  shift, and go to state 65
    ID     shift, and go to state 66
    MINUS  shift, and go to state 67
    NOT    shift, and go to state 68
    LP     shift, and go to state 69

    Exp  go to state 107


State 84
